--- a/about-2.html
+++ b/about-2.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext' type='text/css' media='all' />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext&display=swap' type='text/css' media='all' />
+    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel='stylesheet' href='css/layout.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/fontello/css/fontello.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
@@ -413,7 +417,7 @@
                                                                     <div class="column-1_4 column_padding_bottom">
                                                                         <div id="sc_team_745_1" class="sc_team_item sc_team_item_1 odd first">
                                                                             <div class="sc_team_item_avatar">
-                                                                                <img alt="Bobby Young" src="images/images6.jpeg">
+                                                                                <img alt="Bobby Young" src="images/images6.jpeg" loading="lazy" decoding="async">
                                                                                 <div class="sc_team_item_hover">
                                                                                     <div class="sc_team_item_socials">
                                                                                         <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
@@ -447,7 +451,7 @@
                                                                     <div class="column-1_4 column_padding_bottom">
                                                                         <div id="sc_team_745_2" class="sc_team_item sc_team_item_2 even">
                                                                             <div class="sc_team_item_avatar">
-                                                                                <img alt="Jose Morrison" src="images/images7.jpeg">
+                                                                                <img alt="Jose Morrison" src="images/images7.jpeg" loading="lazy" decoding="async">
                                                                                 <div class="sc_team_item_hover">
                                                                                     <div class="sc_team_item_socials">
                                                                                         <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
@@ -481,7 +485,7 @@
                                                                     <div class="column-1_4 column_padding_bottom">
                                                                         <div id="sc_team_745_3" class="sc_team_item sc_team_item_3 odd">
                                                                             <div class="sc_team_item_avatar">
-                                                                                <img alt="Laura Smith" src="images/images8.jpeg">
+                                                                                <img alt="Laura Smith" src="images/images8.jpeg" loading="lazy" decoding="async">
                                                                                 <div class="sc_team_item_hover">
                                                                                     <div class="sc_team_item_socials">
                                                                                         <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
@@ -515,7 +519,7 @@
                                                                     <div class="column-1_4 column_padding_bottom">
                                                                         <div id="sc_team_745_4" class="sc_team_item sc_team_item_4 even">
                                                                             <div class="sc_team_item_avatar">
-                                                                                <img alt="Tyler Holland" src="images/images9.jpeg">
+                                                                                <img alt="Tyler Holland" src="images/images9.jpeg" loading="lazy" decoding="async">
                                                                                 <div class="sc_team_item_hover">
                                                                                     <div class="sc_team_item_socials">
                                                                                         <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
@@ -572,7 +576,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/post-6.jpg" data-title="It Was Delicious">
                                                                                 <a class="hover_icon hover_icon_link" href="single-post.html?content=5">
-                                                                                    <img alt="" src="images/Untitled-design-5.webp">
+                                                                                    <img alt="" src="images/Untitled-design-5.webp" loading="lazy" decoding="async">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -609,7 +613,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/post-5.jpg" data-title="A Better Cream Life">
                                                                                 <a class="hover_icon hover_icon_link" href="single-post.html?content=6">
-                                                                                    <img alt="" src="images/picking-strawberries.jpg">
+                                                                                    <img alt="" src="images/picking-strawberries.jpg" loading="lazy" decoding="async">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -646,7 +650,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/2000x1600.png" data-title="Butter of a Dream">
                                                                                 <a class="hover_icon hover_icon_link" href="single-post.html?content=7">
-                                                                                    <img alt="" src="images/fishing.jpg">
+                                                                                    <img alt="" src="images/fishing.jpg" loading="lazy" decoding="async">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -832,30 +836,30 @@
 <a href="#" class="scroll_to_top icon-up" title="Scroll to top"></a>
 <div class="custom_html_section"></div>
 
-<script type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
-<script type='text/javascript' src='js/custom/custom.js'></script>
-<script type='text/javascript' src='js/vendor/modernizr.min.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
-<script type='text/javascript' src='js/vendor/superfish.js'></script>
-<script type='text/javascript' src='js/custom/core.utils.js'></script>
-<script type='text/javascript' src='js/custom/core.init.js'></script>
-<script type='text/javascript' src='js/custom/init.js'></script>
-<script type='text/javascript' src='js/custom/core.debug.js'></script>
-<script type='text/javascript' src='js/custom/embed.min.js'></script>
-<script type='text/javascript' src='js/custom/shortcodes.js'></script>
-<script type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/core.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/widget.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
-<script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
+<script defer type='text/javascript' src='js/custom/custom.js'></script>
+<script defer type='text/javascript' src='js/vendor/modernizr.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/superfish.js'></script>
+<script defer type='text/javascript' src='js/custom/core.utils.js'></script>
+<script defer type='text/javascript' src='js/custom/core.init.js'></script>
+<script defer type='text/javascript' src='js/custom/init.js'></script>
+<script defer type='text/javascript' src='js/custom/core.debug.js'></script>
+<script defer type='text/javascript' src='js/custom/embed.min.js'></script>
+<script defer type='text/javascript' src='js/custom/shortcodes.js'></script>
+<script defer type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/core.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/widget.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
 
 <!-- Global cart script -->
-<script type='text/javascript' src='js/local-cart.js'></script>
-<script type='text/javascript' src='js/cart-api.js'></script>
-<script type='text/javascript' src='js/mini-cart.js'></script>
-<script type='text/javascript' src='js/auth-session.js'></script>
-<script type='text/javascript' src='js/blog-dynamic.js'></script>
+<script defer type='text/javascript' src='js/local-cart.js'></script>
+<script defer type='text/javascript' src='js/cart-api.js'></script>
+<script defer type='text/javascript' src='js/mini-cart.js'></script>
+<script defer type='text/javascript' src='js/auth-session.js'></script>
+<script defer type='text/javascript' src='js/blog-dynamic.js'></script>
 <script>
 // Dynamic year tabs pagination (2017-2025, show 5 at a time)
 document.addEventListener('DOMContentLoaded', function() {
