--- a/recipes.html
+++ b/recipes.html
@@ -6,10 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext' type='text/css' media='all' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext&display=swap' type='text/css' media='all' />
     <link rel='stylesheet' href='css/layout.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/fontello/css/fontello.css' type='text/css' media='all' />
-    <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
+    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel='stylesheet' href='css/core.animation.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/shortcodes.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/theme.css' type='text/css' media='all' />
@@ -183,7 +186,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/homecheese.jpeg" data-title="Cranberry Homecheese">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=1">
-                                                                                    <img alt="" src="images/homecheese.jpeg">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/homecheese.jpeg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -212,7 +215,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/il_fullxfull.5179313557_c10m.jpg" data-title="Waffles with Cream">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=2">
-                                                                                    <img alt="" src="images/il_fullxfull.5179313557_c10m.jpg">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/il_fullxfull.5179313557_c10m.jpg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -241,7 +244,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/card2.webp" data-title="Milk & Sugar Cereal">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=3">
-                                                                                    <img alt="" src="images/card2.webp">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/card2.webp">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -270,7 +273,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/No-Churn-SIC-004.webp" data-title="Strawberry Ice Cream">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=4">
-                                                                                    <img alt="" src="images/No-Churn-SIC-004.webp">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/No-Churn-SIC-004.webp">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -299,7 +302,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/card2-3-3.webp" data-title="Creamy Granola">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=5">
-                                                                                    <img alt="" src="images/card2-3-3.webp">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/card2-3-3.webp">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -328,7 +331,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/unsplash-image-w0PGw7eCAYU.jpg" data-title="Corn Waffles">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=6">
-                                                                                    <img alt="" src="images/unsplash-image-w0PGw7eCAYU.jpg">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/unsplash-image-w0PGw7eCAYU.jpg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -357,7 +360,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/bacon.jpeg" data-title="Fried Bacon & Eggs">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=7">
-                                                                                    <img alt="" src="images/bacon.jpeg">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/bacon.jpeg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -386,7 +389,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/black-currant-ice.jpg" data-title="Blueberry Cream Ice">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=8">
-                                                                                    <img alt="" src="images/black-currant-ice.jpg">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/black-currant-ice.jpg">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -415,7 +418,7 @@
                                                                         <div class="post_featured">
                                                                             <div class="post_thumb" data-image="images/Print-Marinade-steak.webp" data-title="Marinated Beef Steak">
                                                                                 <a class="hover_icon hover_icon_link" href="recipe.html?recipe_id=9">
-                                                                                    <img alt="" src="images/Print-Marinade-steak.webp">
+                                                                                    <img loading="lazy" decoding="async" alt="" src="images/Print-Marinade-steak.webp">
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -460,7 +463,7 @@
                                     <div class="vc_column-inner vc_custom_1475049444491">
                                         <div class="wpb_wrapper">
                                             <figure class="sc_image  sc_image_shape_square margin_top_huge" data-animation="animated fadeInLeft normal">
-                                                <img src="images/88417b888aceef44019134d17e94635d0593947d-2000x2000.avif" alt="" />
+                                                <img loading="lazy" decoding="async" src="images/88417b888aceef44019134d17e94635d0593947d-2000x2000.avif" alt="" />
                                             </figure>
                                         </div>
                                     </div>
@@ -512,36 +515,36 @@
                                                         <div class="slides swiper-wrapper">
                                                             <div class="swiper-slide" data-style="width:100%;">
                                                                 <div id="sc_clients_677_1" class="sc_clients_item sc_clients_item_1 odd first">
-                                                                    <div class="sc_client_image">
-                                                                        <img alt="" src="images/5-1.png">
+                                                                        <div class="sc_client_image">
+                                                                        <img loading="lazy" decoding="async" alt="" src="images/5-1.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="swiper-slide" data-style="width:100%;">
                                                                 <div id="sc_clients_677_2" class="sc_clients_item sc_clients_item_2 even">
-                                                                    <div class="sc_client_image">
-                                                                        <img alt="" src="images/3-1.png">
+                                                                        <div class="sc_client_image">
+                                                                        <img loading="lazy" decoding="async" alt="" src="images/3-1.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="swiper-slide" data-style="width:100%;">
                                                                 <div id="sc_clients_677_3" class="sc_clients_item sc_clients_item_3 odd">
-                                                                    <div class="sc_client_image">
-                                                                        <img alt="" src="images/2-1.png">
+                                                                        <div class="sc_client_image">
+                                                                        <img loading="lazy" decoding="async" alt="" src="images/2-1.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="swiper-slide" data-style="width:100%;">
                                                                 <div id="sc_clients_677_4" class="sc_clients_item sc_clients_item_4 even">
-                                                                    <div class="sc_client_image">
-                                                                        <img alt="" src="images/1-1.png">
+                                                                        <div class="sc_client_image">
+                                                                        <img loading="lazy" decoding="async" alt="" src="images/1-1.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="swiper-slide" data-style="width:100%;">
                                                                 <div id="sc_clients_677_5" class="sc_clients_item sc_clients_item_5 odd">
-                                                                    <div class="sc_client_image">
-                                                                        <img alt="" src="images/4-1.png">
+                                                                        <div class="sc_client_image">
+                                                                        <img loading="lazy" decoding="async" alt="" src="images/4-1.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -697,27 +700,27 @@
 <a href="#" class="scroll_to_top icon-up" title="Scroll to top"></a>
 <div class="custom_html_section"></div>
 
-<script type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
-<script type='text/javascript' src='js/custom/custom.js'></script>
-<script type='text/javascript' src='js/vendor/modernizr.min.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
-<script type='text/javascript' src='js/vendor/superfish.js'></script>
-<script type='text/javascript' src='js/custom/core.utils.js'></script>
-<script type='text/javascript' src='js/custom/core.init.js'></script>
-<script type='text/javascript' src='js/custom/init.js'></script>
-<script type='text/javascript' src='js/custom/core.debug.js'></script>
-<script type='text/javascript' src='js/custom/embed.min.js'></script>
-<script type='text/javascript' src='js/custom/shortcodes.js'></script>
-<script type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
-<script type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
-<script type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
+<script defer type='text/javascript' src='js/custom/custom.js'></script>
+<script defer type='text/javascript' src='js/vendor/modernizr.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/superfish.js'></script>
+<script defer type='text/javascript' src='js/custom/core.utils.js'></script>
+<script defer type='text/javascript' src='js/custom/core.init.js'></script>
+<script defer type='text/javascript' src='js/custom/init.js'></script>
+<script defer type='text/javascript' src='js/custom/core.debug.js'></script>
+<script defer type='text/javascript' src='js/custom/embed.min.js'></script>
+<script defer type='text/javascript' src='js/custom/shortcodes.js'></script>
+<script defer type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/isotope.pkgd.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/swiper/swiper.js'></script>
 
 <!-- Global cart script -->
-<script type='text/javascript' src='js/local-cart.js'></script>
-<script type='text/javascript' src='js/cart-api.js'></script>
-<script type='text/javascript' src='js/mini-cart.js'></script>
-<script type='text/javascript' src='js/auth-session.js'></script>
+<script defer type='text/javascript' src='js/local-cart.js'></script>
+<script defer type='text/javascript' src='js/cart-api.js'></script>
+<script defer type='text/javascript' src='js/mini-cart.js'></script>
+<script defer type='text/javascript' src='js/auth-session.js'></script>
 
 </body>
 
