--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext' type='text/css' media='all' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext&display=swap' type='text/css' media='all' />
+    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel='stylesheet' href='css/layout.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/woo/woocommerce-layout.css' type='text/css' media='all' />
     <link rel='stylesheet' href='js/vendor/woo/woocommerce-smallscreen.css' type='text/css' media='only screen and (max-width: 768px)' />
@@ -407,39 +411,39 @@
 <a href="#" class="scroll_to_top icon-up" title="Scroll to top"></a>
 <div class="custom_html_section"></div>
 
-<script type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
-<script type='text/javascript' src='js/custom/custom.js'></script>
-<script type='text/javascript' src='js/vendor/woo/add-to-cart.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/woocommerce-add-to-cart.js'></script>
-<script type='text/javascript' src='js/vendor/modernizr.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/jquery.blockUI.min.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/woocommerce.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/cart-fragments.min.js'></script>
-<script type='text/javascript' src='js/vendor/superfish.js'></script>
-<script type='text/javascript' src='js/custom/core.utils.js'></script>
-<script type='text/javascript' src='js/custom/core.init.js'></script>
-<script type='text/javascript' src='js/custom/init.js'></script>
-<script type='text/javascript' src='js/custom/core.debug.js'></script>
-<script type='text/javascript' src='js/custom/embed.min.js'></script>
-<script type='text/javascript' src='js/custom/shortcodes.js'></script>
-<script type='text/javascript' src='js/vendor/ui/core.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/widget.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/mouse.min.js'></script>
-<script type='text/javascript' src='js/vendor/ui/slider.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/jquery-ui-touch-punch.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/accounting.min.js'></script>
-<script type='text/javascript' src='js/vendor/woo/price-slider.min.js'></script>
-<script type="text/javascript" src="js/shop.js"></script>
-<script type="text/javascript" src="js/product-data.js"></script>
-<script type="text/javascript" src="js/shop-price-range.js"></script>
-<script type="text/javascript" src="js/shop-dynamic.js"></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
+<script defer type='text/javascript' src='js/custom/custom.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/add-to-cart.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/woocommerce-add-to-cart.js'></script>
+<script defer type='text/javascript' src='js/vendor/modernizr.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/jquery.blockUI.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/woocommerce.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/cart-fragments.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/superfish.js'></script>
+<script defer type='text/javascript' src='js/custom/core.utils.js'></script>
+<script defer type='text/javascript' src='js/custom/core.init.js'></script>
+<script defer type='text/javascript' src='js/custom/init.js'></script>
+<script defer type='text/javascript' src='js/custom/core.debug.js'></script>
+<script defer type='text/javascript' src='js/custom/embed.min.js'></script>
+<script defer type='text/javascript' src='js/custom/shortcodes.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/core.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/widget.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/mouse.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/ui/slider.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/jquery-ui-touch-punch.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/accounting.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/woo/price-slider.min.js'></script>
+<script defer type="text/javascript" src="js/shop.js"></script>
+<script defer type="text/javascript" src="js/product-data.js"></script>
+<script defer type="text/javascript" src="js/shop-price-range.js"></script>
+<script defer type="text/javascript" src="js/shop-dynamic.js"></script>
     <!-- Server cart: API first, then mini-cart, then page glue -->
-    <script type="text/javascript" src="js/cart-api.js"></script>
-    <script type="text/javascript" src="js/mini-cart.js"></script>
-    <script type="text/javascript" src="js/local-cart.js"></script>
-<script type="text/javascript" src="js/auth-session.js"></script>
+    <script defer type="text/javascript" src="js/cart-api.js"></script>
+    <script defer type="text/javascript" src="js/mini-cart.js"></script>
+    <script defer type="text/javascript" src="js/local-cart.js"></script>
+<script defer type="text/javascript" src="js/auth-session.js"></script>
 <script type="text/javascript">
     // Hydrate dynamic prices from PRODUCT_PRICING map
     document.addEventListener('DOMContentLoaded', function(){
