--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext' type='text/css' media='all' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Average|Droid+Serif:400,700|Libre+Baskerville:400,400i,700|Open+Sans:300,400,600,700,800|Oswald:300,400,700|Raleway:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext&display=swap' type='text/css' media='all' />
+    <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel='stylesheet' href='css/layout.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/fontello/css/fontello.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/style.css' type='text/css' media='all' />
@@ -541,28 +545,28 @@
 <div class="custom_html_section"></div>
 
 
-<script type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
-<script type='text/javascript' src='js/custom/custom.js'></script>
-<script type='text/javascript' src='js/vendor/modernizr.min.js'></script>
-<script type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
-<script type='text/javascript' src='js/vendor/superfish.js'></script>
-<script type='text/javascript' src='js/custom/core.utils.js'></script>
-<script type='text/javascript' src='js/custom/core.init.js'></script>
-<script type='text/javascript' src='js/custom/init.js'></script>
-<script type='text/javascript' src='js/custom/core.debug.js'></script>
-<script type='text/javascript' src='js/custom/embed.min.js'></script>
-<script type='text/javascript' src='js/custom/shortcodes.js'></script>
-<script type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
+<script defer type='text/javascript' src='js/custom/custom.js'></script>
+<script defer type='text/javascript' src='js/vendor/modernizr.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/jquery/js.cookie.min.js'></script>
+<script defer type='text/javascript' src='js/vendor/superfish.js'></script>
+<script defer type='text/javascript' src='js/custom/core.utils.js'></script>
+<script defer type='text/javascript' src='js/custom/core.init.js'></script>
+<script defer type='text/javascript' src='js/custom/init.js'></script>
+<script defer type='text/javascript' src='js/custom/core.debug.js'></script>
+<script defer type='text/javascript' src='js/custom/embed.min.js'></script>
+<script defer type='text/javascript' src='js/custom/shortcodes.js'></script>
+<script defer type='text/javascript' src='js/vendor/comp/comp_front.min.js'></script>
         
-<script type='text/javascript' src='js/vendor/core.googlemap.js'></script>
-<script type='text/javascript' src='js/custom/core.messages.js'></script>
+<script defer type='text/javascript' src='js/vendor/core.googlemap.js'></script>
+<script defer type='text/javascript' src='js/custom/core.messages.js'></script>
 
 <!-- Global cart script -->
-<script type='text/javascript' src='js/local-cart.js'></script>
-<script type='text/javascript' src='js/cart-api.js'></script>
-<script type='text/javascript' src='js/mini-cart.js'></script>
-<script type='text/javascript' src='js/auth-session.js'></script>
+<script defer type='text/javascript' src='js/local-cart.js'></script>
+<script defer type='text/javascript' src='js/cart-api.js'></script>
+<script defer type='text/javascript' src='js/mini-cart.js'></script>
+<script defer type='text/javascript' src='js/auth-session.js'></script>
 
 <script>
 // Map activation: allow clicking the map by double-clicking the overlay; keep form above
