--- a/request-password-reset.html
+++ b/request-password-reset.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Request Password Reset - Tarmonia</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
   <style> .reset-box{max-width:480px;margin:48px auto;padding:24px;background:#fff;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,.06);} label{display:block;margin-bottom:8px;} input{width:100%;padding:8px;margin-bottom:12px;} button{padding:10px 16px;background:#72b16a;color:#fff;border:0;border-radius:6px;} .note{color:#666;font-size:13px;} </style>
 </head>
 <body>
