--- a/track-order.html
+++ b/track-order.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Track Your Order - Tarmonia</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
   <style>.track-box{max-width:600px;margin:48px auto;padding:24px;background:#fff;border-radius:8px;} label{display:block;margin-bottom:8px;} input{width:100%;padding:8px;margin-bottom:12px;} button{padding:10px 16px;background:#72b16a;color:#fff;border:0;border-radius:6px;} .result{margin-top:16px;padding:12px;background:#f8f8f8;border-radius:6px;}</style>
 </head>
 <body>
